--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Game 3D Kota</title>
+<title>Game 3D Fix</title>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/controls/OrbitControls.js"></script>
 <style>
-body { margin:0; overflow:hidden; }
+body { margin:0; overflow:hidden; background:black; }
 
 #joystick {
   position:absolute;
@@ -46,42 +45,41 @@ body { margin:0; overflow:hidden; }
 <button id="jumpBtn">JUMP</button>
 
 <script>
+
+// ================= SCENE =================
 const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x87ceeb);
 
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
 camera.position.set(0,5,10);
 
-const renderer = new THREE.WebGLRenderer();
+const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
-const controls = new THREE.OrbitControls(camera, renderer.domElement);
-controls.enableDamping = true;
-
-// LIGHT
+// ================= LIGHT =================
 const light = new THREE.DirectionalLight(0xffffff,1);
 light.position.set(10,20,10);
 scene.add(light);
 
-// GROUND
+// ================= GROUND =================
 const ground = new THREE.Mesh(
-  new THREE.PlaneGeometry(100,100),
+  new THREE.PlaneGeometry(200,200),
   new THREE.MeshPhongMaterial({color:0x228B22})
 );
 ground.rotation.x = -Math.PI/2;
 scene.add(ground);
 
-// JALAN
+// ================= ROAD =================
 const road = new THREE.Mesh(
-  new THREE.PlaneGeometry(6,100),
+  new THREE.PlaneGeometry(6,200),
   new THREE.MeshPhongMaterial({color:0x222222})
 );
 road.rotation.x = -Math.PI/2;
 road.position.y = 0.01;
 scene.add(road);
 
-// PLAYER
+// ================= PLAYER =================
 const player = new THREE.Group();
 
 const body = new THREE.Mesh(
@@ -100,34 +98,31 @@ player.add(head);
 
 scene.add(player);
 
-// BANGUNAN (sejajar, beda warna, jarak 5cm = 0.05)
-const spacing = 0.05;
-for(let i=-40; i<40; i+=6){
-  
-  // kiri
-  const leftBuilding = new THREE.Mesh(
-    new THREE.BoxGeometry(3,6,3),
-    new THREE.MeshPhongMaterial({color:Math.random()*0xffffff})
-  );
-  leftBuilding.position.set(-4 - spacing,3,i);
-  scene.add(leftBuilding);
+// ================= BUILDINGS =================
+for(let i=-80; i<=80; i+=8){
 
-  // kanan
-  const rightBuilding = new THREE.Mesh(
+  const left = new THREE.Mesh(
     new THREE.BoxGeometry(3,6,3),
     new THREE.MeshPhongMaterial({color:Math.random()*0xffffff})
   );
-  rightBuilding.position.set(4 + spacing,3,i);
-  scene.add(rightBuilding);
+  left.position.set(-5,3,i);
+  scene.add(left);
+
+  const right = new THREE.Mesh(
+    new THREE.BoxGeometry(3,6,3),
+    new THREE.MeshPhongMaterial({color:Math.random()*0xffffff})
+  );
+  right.position.set(5,3,i);
+  scene.add(right);
 }
 
-// MOVEMENT
+// ================= MOVEMENT =================
 let moveForward = 0;
 let moveSide = 0;
 let velocityY = 0;
 let canJump = true;
 
-// JOYSTICK FIX ARAH
+// ================= JOYSTICK =================
 const joystick = document.getElementById("joystick");
 const stick = document.getElementById("stick");
 
@@ -139,9 +134,8 @@ joystick.addEventListener("touchmove", e=>{
   stick.style.left = (x+35)+"px";
   stick.style.top = (y+35)+"px";
 
-  // FIX: arah depan sekarang benar
-  moveForward = -y/40;
-  moveSide = x/40;
+  moveForward = -y/50; // FIX arah benar
+  moveSide = x/50;
 });
 
 joystick.addEventListener("touchend", ()=>{
@@ -151,23 +145,21 @@ joystick.addEventListener("touchend", ()=>{
   stick.style.top = "35px";
 });
 
-// JUMP
+// ================= JUMP =================
 document.getElementById("jumpBtn").onclick = ()=>{
   if(canJump){
-    velocityY = 0.2;
+    velocityY = 0.25;
     canJump = false;
   }
 };
 
-// ANIMATE
+// ================= ANIMATE =================
 function animate(){
   requestAnimationFrame(animate);
 
-  // gerak
   player.position.z += moveForward;
   player.position.x += moveSide;
 
-  // GRAVITY
   velocityY -= 0.01;
   player.position.y += velocityY;
 
@@ -177,16 +169,23 @@ function animate(){
     canJump = true;
   }
 
-  // KAMERA IKUT PLAYER
+  // kamera ikut player (tidak blank)
   camera.position.x = player.position.x;
   camera.position.z = player.position.z + 10;
   camera.lookAt(player.position);
 
-  controls.update();
   renderer.render(scene,camera);
 }
 
 animate();
+
+// resize fix
+window.addEventListener("resize", ()=>{
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+});
+
 </script>
 </body>
 </html>
