--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Game 3D Fix</title>
+<title>Game 3D Kamera Bebas</title>
+
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/controls/OrbitControls.js"></script>
+
 <style>
 body { margin:0; overflow:hidden; background:black; }
 
-#joystick {
+#joystick{
   position:absolute;
   bottom:20px;
   left:20px;
@@ -17,7 +20,7 @@ body { margin:0; overflow:hidden; background:black; }
   border-radius:50%;
 }
 
-#stick {
+#stick{
   position:absolute;
   width:50px;
   height:50px;
@@ -51,11 +54,16 @@ const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x87ceeb);
 
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0,5,10);
+camera.position.set(0,6,12);
 
 const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
+
+// ================= CONTROLS =================
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.enableDamping = true;
+controls.target.set(0,1,0);
 
 // ================= LIGHT =================
 const light = new THREE.DirectionalLight(0xffffff,1);
@@ -122,7 +130,7 @@ let moveSide = 0;
 let velocityY = 0;
 let canJump = true;
 
-// ================= JOYSTICK =================
+// ================= JOYSTICK FIX TOTAL =================
 const joystick = document.getElementById("joystick");
 const stick = document.getElementById("stick");
 
@@ -134,8 +142,9 @@ joystick.addEventListener("touchmove", e=>{
   stick.style.left = (x+35)+"px";
   stick.style.top = (y+35)+"px";
 
-  moveForward = -y/50; // FIX arah benar
-  moveSide = x/50;
+  // SEKARANG BENAR
+  moveForward = -y/60;
+  moveSide = x/60;
 });
 
 joystick.addEventListener("touchend", ()=>{
@@ -157,9 +166,16 @@ document.getElementById("jumpBtn").onclick = ()=>{
 function animate(){
   requestAnimationFrame(animate);
 
-  player.position.z += moveForward;
-  player.position.x += moveSide;
+  // Gerak relatif arah kamera
+  const angle = camera.rotation.y;
 
+  player.position.z += moveForward * Math.cos(angle);
+  player.position.x += moveForward * Math.sin(angle);
+
+  player.position.x += moveSide * Math.cos(angle);
+  player.position.z -= moveSide * Math.sin(angle);
+
+  // Gravity
   velocityY -= 0.01;
   player.position.y += velocityY;
 
@@ -169,17 +185,15 @@ function animate(){
     canJump = true;
   }
 
-  // kamera ikut player (tidak blank)
-  camera.position.x = player.position.x;
-  camera.position.z = player.position.z + 10;
-  camera.lookAt(player.position);
+  // Kamera follow player
+  controls.target.copy(player.position);
 
+  controls.update();
   renderer.render(scene,camera);
 }
 
 animate();
 
-// resize fix
 window.addEventListener("resize", ()=>{
   camera.aspect = window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
