--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Game 3D Kamera Bebas</title>
-
+<title>Game 3D Stabil</title>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/controls/OrbitControls.js"></script>
-
 <style>
 body { margin:0; overflow:hidden; background:black; }
 
@@ -49,28 +46,23 @@ body { margin:0; overflow:hidden; background:black; }
 
 <script>
 
-// ================= SCENE =================
+// ===== SCENE =====
 const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x87ceeb);
 
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0,6,12);
+camera.position.set(0,5,12);
 
 const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
-// ================= CONTROLS =================
-const controls = new THREE.OrbitControls(camera, renderer.domElement);
-controls.enableDamping = true;
-controls.target.set(0,1,0);
-
-// ================= LIGHT =================
+// ===== LIGHT =====
 const light = new THREE.DirectionalLight(0xffffff,1);
 light.position.set(10,20,10);
 scene.add(light);
 
-// ================= GROUND =================
+// ===== GROUND =====
 const ground = new THREE.Mesh(
   new THREE.PlaneGeometry(200,200),
   new THREE.MeshPhongMaterial({color:0x228B22})
@@ -78,7 +70,7 @@ const ground = new THREE.Mesh(
 ground.rotation.x = -Math.PI/2;
 scene.add(ground);
 
-// ================= ROAD =================
+// ===== ROAD =====
 const road = new THREE.Mesh(
   new THREE.PlaneGeometry(6,200),
   new THREE.MeshPhongMaterial({color:0x222222})
@@ -87,7 +79,7 @@ road.rotation.x = -Math.PI/2;
 road.position.y = 0.01;
 scene.add(road);
 
-// ================= PLAYER =================
+// ===== PLAYER =====
 const player = new THREE.Group();
 
 const body = new THREE.Mesh(
@@ -106,8 +98,8 @@ player.add(head);
 
 scene.add(player);
 
-// ================= BUILDINGS =================
-for(let i=-80; i<=80; i+=8){
+// ===== BUILDINGS =====
+for(let i=-80;i<=80;i+=8){
 
   const left = new THREE.Mesh(
     new THREE.BoxGeometry(3,6,3),
@@ -124,13 +116,13 @@ for(let i=-80; i<=80; i+=8){
   scene.add(right);
 }
 
-// ================= MOVEMENT =================
+// ===== MOVEMENT =====
 let moveForward = 0;
 let moveSide = 0;
 let velocityY = 0;
 let canJump = true;
 
-// ================= JOYSTICK FIX TOTAL =================
+// ===== JOYSTICK =====
 const joystick = document.getElementById("joystick");
 const stick = document.getElementById("stick");
 
@@ -142,7 +134,6 @@ joystick.addEventListener("touchmove", e=>{
   stick.style.left = (x+35)+"px";
   stick.style.top = (y+35)+"px";
 
-  // SEKARANG BENAR
   moveForward = -y/60;
   moveSide = x/60;
 });
@@ -154,7 +145,30 @@ joystick.addEventListener("touchend", ()=>{
   stick.style.top = "35px";
 });
 
-// ================= JUMP =================
+// ===== PUTAR KAMERA PAKAI SENTUH LAYAR =====
+let isDragging = false;
+let previousX = 0;
+
+document.addEventListener("touchstart", e=>{
+  if(e.touches.length==1){
+    isDragging = true;
+    previousX = e.touches[0].clientX;
+  }
+});
+
+document.addEventListener("touchmove", e=>{
+  if(isDragging){
+    const delta = e.touches[0].clientX - previousX;
+    previousX = e.touches[0].clientX;
+    camera.rotation.y -= delta * 0.005;
+  }
+});
+
+document.addEventListener("touchend", ()=>{
+  isDragging = false;
+});
+
+// ===== JUMP =====
 document.getElementById("jumpBtn").onclick = ()=>{
   if(canJump){
     velocityY = 0.25;
@@ -162,11 +176,10 @@ document.getElementById("jumpBtn").onclick = ()=>{
   }
 };
 
-// ================= ANIMATE =================
+// ===== ANIMATE =====
 function animate(){
   requestAnimationFrame(animate);
 
-  // Gerak relatif arah kamera
   const angle = camera.rotation.y;
 
   player.position.z += moveForward * Math.cos(angle);
@@ -175,7 +188,6 @@ function animate(){
   player.position.x += moveSide * Math.cos(angle);
   player.position.z -= moveSide * Math.sin(angle);
 
-  // Gravity
   velocityY -= 0.01;
   player.position.y += velocityY;
 
@@ -185,15 +197,17 @@ function animate(){
     canJump = true;
   }
 
-  // Kamera follow player
-  controls.target.copy(player.position);
+  // Kamera follow belakang player
+  camera.position.x = player.position.x - Math.sin(angle)*10;
+  camera.position.z = player.position.z - Math.cos(angle)*10;
+  camera.lookAt(player.position);
 
-  controls.update();
   renderer.render(scene,camera);
 }
 
 animate();
 
+// resize
 window.addEventListener("resize", ()=>{
   camera.aspect = window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
