--- a/index.html
+++ b/index.html
@@ -2,39 +2,39 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>3D Game Minecraft Style</title>
+<title>3D World Full Collision</title>
 <style>
 body { margin:0; overflow:hidden; }
 canvas { display:block; }
 
-/* ===== JOYSTICK KOTAK ===== */
-#joystick {
+/* JOYSTICK KOTAK */
+#joystick{
   position:fixed;
   bottom:60px;
   left:40px;
-  width:140px;
-  height:140px;
+  width:150px;
+  height:150px;
   background:rgba(255,255,255,0.15);
   border:3px solid white;
   touch-action:none;
 }
-#stick {
+#stick{
   position:absolute;
-  width:70px;
-  height:70px;
+  width:75px;
+  height:75px;
   background:white;
-  left:35px;
-  top:35px;
+  left:37px;
+  top:37px;
 }
 
-/* ===== JUMP BUTTON ===== */
-#jumpBtn {
+/* JUMP */
+#jumpBtn{
   position:fixed;
   bottom:60px;
   right:40px;
-  width:120px;
-  height:120px;
-  font-size:26px;
+  width:130px;
+  height:130px;
+  font-size:28px;
   background:orange;
   color:white;
   border:none;
@@ -49,146 +49,156 @@ canvas { display:block; }
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
 <script>
+// ================= BASIC =================
 const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x87ceeb);
 
-const camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
+const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
 const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(window.innerWidth,window.innerHeight);
+renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
 
-// LIGHT
 const light = new THREE.DirectionalLight(0xffffff,1);
-light.position.set(10,20,10);
+light.position.set(20,40,20);
 scene.add(light);
 
-// GROUND
-const groundGeo = new THREE.PlaneGeometry(200,200);
+// ================= GROUND =================
+const groundGeo = new THREE.PlaneGeometry(300,300);
 const groundMat = new THREE.MeshStandardMaterial({color:0x228B22});
 const ground = new THREE.Mesh(groundGeo,groundMat);
 ground.rotation.x = -Math.PI/2;
 scene.add(ground);
 
-// ROAD (tikungan)
-function createRoad(x,z,w,d){
-  const geo = new THREE.BoxGeometry(w,0.1,d);
-  const mat = new THREE.MeshStandardMaterial({color:0x444444});
-  const mesh = new THREE.Mesh(geo,mat);
-  mesh.position.set(x,0.05,z);
-  scene.add(mesh);
-}
-createRoad(0,0,10,40);
-createRoad(20,20,40,10);
-
-// PLAYER
-const playerGeo = new THREE.BoxGeometry(1,2,1);
-const playerMat = new THREE.MeshStandardMaterial({color:0xff0000});
-const player = new THREE.Mesh(playerGeo,playerMat);
+// ================= PLAYER =================
+const player = new THREE.Mesh(
+  new THREE.BoxGeometry(1,2,1),
+  new THREE.MeshStandardMaterial({color:0xff0000})
+);
 player.position.y = 1;
 scene.add(player);
 
-// BUILDINGS + COLLISION
+// ================= BUILDINGS WORLD =================
 let buildings = [];
 
 function createBuilding(x,z){
-  const geo = new THREE.BoxGeometry(4,6,4);
-  const mat = new THREE.MeshStandardMaterial({color:0x888888});
-  const mesh = new THREE.Mesh(geo,mat);
-  mesh.position.set(x,3,z);
+  const h = 4 + Math.random()*8;
+  const mesh = new THREE.Mesh(
+    new THREE.BoxGeometry(4,h,4),
+    new THREE.MeshStandardMaterial({color:0x888888})
+  );
+  mesh.position.set(x,h/2,z);
   scene.add(mesh);
   buildings.push(mesh);
 }
 
-createBuilding(5,10);
-createBuilding(-5,15);
-createBuilding(20,25);
+// Generate banyak bangunan
+for(let x=-100;x<=100;x+=12){
+  for(let z=-100;z<=100;z+=12){
+    if(Math.random()>0.3){ // biar ada jalan kosong
+      createBuilding(x,z);
+    }
+  }
+}
 
-// MOVEMENT
-let moveForward = 0;
-let moveSide = 0;
-let velocityY = 0;
-let canJump = true;
-let angle = 0;
+// ================= MOVEMENT =================
+let moveForward=0, moveSide=0;
+let velocityY=0, canJump=true;
 
-// JOYSTICK
-const joystick = document.getElementById("joystick");
-const stick = document.getElementById("stick");
+let yaw=0;     // kiri kanan
+let pitch=0;   // atas bawah
 
-joystick.addEventListener("touchmove", e=>{
-  const rect = joystick.getBoundingClientRect();
-  let x = e.touches[0].clientX - rect.left - 70;
-  let y = e.touches[0].clientY - rect.top - 70;
+// ================= JOYSTICK =================
+const joystick=document.getElementById("joystick");
+const stick=document.getElementById("stick");
 
-  x = Math.max(-60,Math.min(60,x));
-  y = Math.max(-60,Math.min(60,y));
+joystick.addEventListener("touchmove",e=>{
+  const rect=joystick.getBoundingClientRect();
+  let x=e.touches[0].clientX-rect.left-75;
+  let y=e.touches[0].clientY-rect.top-75;
 
-  stick.style.left = 35 + x + "px";
-  stick.style.top = 35 + y + "px";
+  x=Math.max(-65,Math.min(65,x));
+  y=Math.max(-65,Math.min(65,y));
 
-  moveForward = -y / 60;
-  moveSide = x / 60;
+  stick.style.left=37+x+"px";
+  stick.style.top=37+y+"px";
+
+  moveForward=-y/65;
+  moveSide=x/65;
 });
 
-joystick.addEventListener("touchend", ()=>{
-  stick.style.left="35px";
-  stick.style.top="35px";
+joystick.addEventListener("touchend",()=>{
+  stick.style.left="37px";
+  stick.style.top="37px";
   moveForward=0;
   moveSide=0;
 });
 
-// JUMP
+// ================= JUMP =================
 document.getElementById("jumpBtn").addEventListener("touchstart",()=>{
   if(canJump){
-    velocityY = 0.28;
-    canJump = false;
+    velocityY=0.3;
+    canJump=false;
   }
 });
 
-// ROTATE CAMERA
-let startX=0;
+// ================= CAMERA CONTROL =================
+let startX=0,startY=0;
+
 document.addEventListener("touchstart",e=>{
-  if(e.touches.length==1) startX=e.touches[0].clientX;
+  if(e.touches.length==1){
+    startX=e.touches[0].clientX;
+    startY=e.touches[0].clientY;
+  }
 });
 
 document.addEventListener("touchmove",e=>{
   if(e.touches.length==1){
-    let deltaX = e.touches[0].clientX-startX;
-    angle -= deltaX*0.005;
-    startX = e.touches[0].clientX;
+    let dx=e.touches[0].clientX-startX;
+    let dy=e.touches[0].clientY-startY;
+
+    yaw-=dx*0.005;
+    pitch-=dy*0.005;
+
+    // batas atas bawah biar gak jungkir balik
+    pitch=Math.max(-1.2,Math.min(1.2,pitch));
+
+    startX=e.touches[0].clientX;
+    startY=e.touches[0].clientY;
   }
 });
 
-// COLLISION CHECK
-function checkCollision(nextX,nextZ){
+// ================= COLLISION =================
+function checkCollision(nx,nz){
   for(let b of buildings){
-    if(Math.abs(nextX-b.position.x)<3 &&
-       Math.abs(nextZ-b.position.z)<3){
+    if(Math.abs(nx-b.position.x)<3 &&
+       Math.abs(nz-b.position.z)<3 &&
+       player.position.y< b.position.y + 5){
          return true;
     }
   }
   return false;
 }
 
-// LOOP
+// ================= LOOP =================
 function animate(){
   requestAnimationFrame(animate);
 
-  let nextX = player.position.x;
-  let nextZ = player.position.z;
+  let nx=player.position.x;
+  let nz=player.position.z;
 
-  nextX += Math.sin(angle)*moveForward*0.3;
-  nextZ += Math.cos(angle)*moveForward*0.3;
+  nx+=Math.sin(yaw)*moveForward*0.4;
+  nz+=Math.cos(yaw)*moveForward*0.4;
 
-  nextX += Math.cos(angle)*moveSide*0.3;
-  nextZ -= Math.sin(angle)*moveSide*0.3;
+  nx+=Math.cos(yaw)*moveSide*0.4;
+  nz-=Math.sin(yaw)*moveSide*0.4;
 
-  if(!checkCollision(nextX,nextZ)){
-    player.position.x = nextX;
-    player.position.z = nextZ;
+  if(!checkCollision(nx,nz)){
+    player.position.x=nx;
+    player.position.z=nz;
   }
 
-  velocityY -= 0.01;
-  player.position.y += velocityY;
+  velocityY-=0.01;
+  player.position.y+=velocityY;
 
   if(player.position.y<=1){
     player.position.y=1;
@@ -196,12 +206,18 @@ function animate(){
     canJump=true;
   }
 
-  // CAMERA FIX BELAKANG
-  camera.position.x = player.position.x - Math.sin(angle)*8;
-  camera.position.z = player.position.z - Math.cos(angle)*8;
-  camera.position.y = player.position.y + 4;
+  // CAMERA BEBAS
+  const distance=8;
 
-  camera.lookAt(player.position.x,player.position.y+1,player.position.z);
+  camera.position.x=player.position.x - Math.sin(yaw)*distance*Math.cos(pitch);
+  camera.position.z=player.position.z - Math.cos(yaw)*distance*Math.cos(pitch);
+  camera.position.y=player.position.y + 4 + Math.sin(pitch)*distance;
+
+  camera.lookAt(
+    player.position.x,
+    player.position.y+1,
+    player.position.z
+  );
 
   renderer.render(scene,camera);
 }
@@ -209,11 +225,10 @@ function animate(){
 animate();
 
 window.addEventListener("resize",()=>{
-  camera.aspect=window.innerWidth/window.innerHeight;
+  camera.aspect=innerWidth/innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
+  renderer.setSize(innerWidth,innerHeight);
 });
 </script>
-
 </body>
 </html>
