--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>3D Game Custom Player</title>
+<title>3D Game Custom Character</title>
 <style>
-body { margin:0; overflow:hidden; }
+body { margin:0; overflow:hidden; font-family:Arial; }
 canvas { display:block; }
 
-/* JOYSTICK KOTAK */
+/* START SCREEN */
+#startScreen{
+  position:fixed;
+  inset:0;
+  background:#222;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  color:white;
+}
+#startScreen input{
+  padding:10px;
+  font-size:18px;
+  margin:10px;
+}
+#startScreen button{
+  padding:10px 20px;
+  font-size:18px;
+}
+
+/* JOYSTICK */
 #joystick{
   position:fixed;
   bottom:60px;
@@ -17,6 +38,7 @@ canvas { display:block; }
   background:rgba(255,255,255,0.15);
   border:3px solid white;
   touch-action:none;
+  display:none;
 }
 #stick{
   position:absolute;
@@ -38,10 +60,17 @@ canvas { display:block; }
   background:orange;
   color:white;
   border:none;
+  display:none;
 }
 </style>
 </head>
 <body>
+
+<div id="startScreen">
+  <h2>Masukkan Nama Karakter</h2>
+  <input type="text" id="nameInput" placeholder="Nama kamu">
+  <button onclick="startGame()">Mainkan</button>
+</div>
 
 <div id="joystick"><div id="stick"></div></div>
 <button id="jumpBtn">JUMP</button>
@@ -49,141 +78,225 @@ canvas { display:block; }
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
 <script>
-// ================= BASIC =================
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87ceeb);
+let scene,camera,renderer,player,nameSprite;
+let buildings=[];
+let moveForward=0,moveSide=0;
+let velocityY=0,canJump=true;
+let yaw=0,pitch=0;
 
-const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth,innerHeight);
-document.body.appendChild(renderer.domElement);
+// ================= START GAME =================
+function startGame(){
+  const playerName=document.getElementById("nameInput").value.trim();
+  if(playerName===""){
+    alert("Masukkan nama dulu!");
+    return;
+  }
 
-const light = new THREE.DirectionalLight(0xffffff,1);
-light.position.set(20,40,20);
-scene.add(light);
+  document.getElementById("startScreen").style.display="none";
+  document.getElementById("joystick").style.display="block";
+  document.getElementById("jumpBtn").style.display="block";
 
-// ================= GROUND =================
-const groundGeo = new THREE.PlaneGeometry(300,300);
-const groundMat = new THREE.MeshStandardMaterial({color:0x228B22});
-const ground = new THREE.Mesh(groundGeo,groundMat);
-ground.rotation.x = -Math.PI/2;
-scene.add(ground);
-
-// ================= PLAYER SESUAI GAMBAR =================
-const player = new THREE.Group();
-
-// BADAN (biru besar bawah)
-const body = new THREE.Mesh(
-  new THREE.BoxGeometry(2.5,2,1.5),
-  new THREE.MeshStandardMaterial({color:0x1e4fff})
-);
-body.position.y = 1;
-player.add(body);
-
-// KEPALA (kuning kecil atas)
-const head = new THREE.Mesh(
-  new THREE.BoxGeometry(1.8,1,1.2),
-  new THREE.MeshStandardMaterial({color:0xffd54f})
-);
-head.position.y = 2.5;
-player.add(head);
-
-player.position.y = 0;
-scene.add(player);
-
-// ================= BUILDINGS =================
-let buildings = [];
-
-function createBuilding(x,z){
-  const h = 4 + Math.random()*8;
-  const mesh = new THREE.Mesh(
-    new THREE.BoxGeometry(4,h,4),
-    new THREE.MeshStandardMaterial({color:0x888888})
-  );
-  mesh.position.set(x,h/2,z);
-  scene.add(mesh);
-  buildings.push(mesh);
+  init(playerName);
+  animate();
 }
 
-for(let x=-100;x<=100;x+=12){
-  for(let z=-100;z<=100;z+=12){
-    if(Math.random()>0.3){
-      createBuilding(x,z);
+// ================= INIT =================
+function init(playerName){
+  scene=new THREE.Scene();
+  scene.background=new THREE.Color(0x87ceeb);
+
+  camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
+  renderer=new THREE.WebGLRenderer({antialias:true});
+  renderer.setSize(innerWidth,innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  const light=new THREE.DirectionalLight(0xffffff,1);
+  light.position.set(20,40,20);
+  scene.add(light);
+
+  const ground=new THREE.Mesh(
+    new THREE.PlaneGeometry(300,300),
+    new THREE.MeshStandardMaterial({color:0x228B22})
+  );
+  ground.rotation.x=-Math.PI/2;
+  scene.add(ground);
+
+  createPlayer(playerName);
+  generateBuildings();
+  setupControls();
+}
+
+// ================= PLAYER =================
+function createPlayer(playerName){
+  player=new THREE.Group();
+
+  // BODY (biru)
+  const body=new THREE.Mesh(
+    new THREE.BoxGeometry(3,2,1.5),
+    new THREE.MeshStandardMaterial({color:0x1e4fff})
+  );
+  body.position.y=1;
+  player.add(body);
+
+  // HEAD (kuning)
+  const head=new THREE.Mesh(
+    new THREE.BoxGeometry(2,1.2,1.2),
+    new THREE.MeshStandardMaterial({color:0xffd54f})
+  );
+  head.position.y=2.8;
+  player.add(head);
+
+  // LEFT ARM
+  const armL=new THREE.Mesh(
+    new THREE.BoxGeometry(0.6,1.5,0.6),
+    new THREE.MeshStandardMaterial({color:0x1e4fff})
+  );
+  armL.position.set(-2,1.5,0);
+  player.add(armL);
+
+  // RIGHT ARM
+  const armR=new THREE.Mesh(
+    new THREE.BoxGeometry(0.6,1.5,0.6),
+    new THREE.MeshStandardMaterial({color:0x1e4fff})
+  );
+  armR.position.set(2,1.5,0);
+  player.add(armR);
+
+  // LEGS (hitam)
+  const legL=new THREE.Mesh(
+    new THREE.BoxGeometry(0.6,1.5,0.6),
+    new THREE.MeshStandardMaterial({color:0x000000})
+  );
+  legL.position.set(-0.8,0.25,0);
+  player.add(legL);
+
+  const legR=new THREE.Mesh(
+    new THREE.BoxGeometry(0.6,1.5,0.6),
+    new THREE.MeshStandardMaterial({color:0x000000})
+  );
+  legR.position.set(0.8,0.25,0);
+  player.add(legR);
+
+  // LETTER A on body
+  const canvas=document.createElement("canvas");
+  canvas.width=256;
+  canvas.height=256;
+  const ctx=canvas.getContext("2d");
+  ctx.fillStyle="white";
+  ctx.fillRect(0,0,256,256);
+  ctx.fillStyle="black";
+  ctx.font="200px Arial";
+  ctx.textAlign="center";
+  ctx.textBaseline="middle";
+  ctx.fillText("A",128,128);
+
+  const texture=new THREE.CanvasTexture(canvas);
+  body.material.map=texture;
+  body.material.needsUpdate=true;
+
+  // NAME TAG
+  nameSprite=createTextSprite(playerName);
+  nameSprite.position.set(0,4,0);
+  player.add(nameSprite);
+
+  scene.add(player);
+}
+
+// ================= TEXT SPRITE =================
+function createTextSprite(text){
+  const canvas=document.createElement("canvas");
+  canvas.width=512;
+  canvas.height=256;
+  const ctx=canvas.getContext("2d");
+
+  ctx.fillStyle="white";
+  ctx.fillRect(0,0,512,256);
+  ctx.fillStyle="black";
+  ctx.font="80px Arial";
+  ctx.textAlign="center";
+  ctx.textBaseline="middle";
+  ctx.fillText(text,256,128);
+
+  const texture=new THREE.CanvasTexture(canvas);
+  const material=new THREE.SpriteMaterial({map:texture});
+  const sprite=new THREE.Sprite(material);
+  sprite.scale.set(5,2.5,1);
+
+  return sprite;
+}
+
+// ================= BUILDINGS =================
+function generateBuildings(){
+  for(let x=-100;x<=100;x+=12){
+    for(let z=-100;z<=100;z+=12){
+      if(Math.random()>0.3){
+        const h=4+Math.random()*8;
+        const b=new THREE.Mesh(
+          new THREE.BoxGeometry(4,h,4),
+          new THREE.MeshStandardMaterial({color:0x888888})
+        );
+        b.position.set(x,h/2,z);
+        scene.add(b);
+        buildings.push(b);
+      }
     }
   }
 }
 
-// ================= MOVEMENT =================
-let moveForward=0, moveSide=0;
-let velocityY=0, canJump=true;
-let yaw=0, pitch=0;
+// ================= CONTROLS =================
+function setupControls(){
+  const joystick=document.getElementById("joystick");
+  const stick=document.getElementById("stick");
 
-// ================= JOYSTICK =================
-const joystick=document.getElementById("joystick");
-const stick=document.getElementById("stick");
+  joystick.addEventListener("touchmove",e=>{
+    const rect=joystick.getBoundingClientRect();
+    let x=e.touches[0].clientX-rect.left-75;
+    let y=e.touches[0].clientY-rect.top-75;
+    x=Math.max(-65,Math.min(65,x));
+    y=Math.max(-65,Math.min(65,y));
+    stick.style.left=37+x+"px";
+    stick.style.top=37+y+"px";
+    moveForward=-y/65;
+    moveSide=x/65;
+  });
 
-joystick.addEventListener("touchmove",e=>{
-  const rect=joystick.getBoundingClientRect();
-  let x=e.touches[0].clientX-rect.left-75;
-  let y=e.touches[0].clientY-rect.top-75;
+  joystick.addEventListener("touchend",()=>{
+    stick.style.left="37px";
+    stick.style.top="37px";
+    moveForward=0;
+    moveSide=0;
+  });
 
-  x=Math.max(-65,Math.min(65,x));
-  y=Math.max(-65,Math.min(65,y));
+  document.getElementById("jumpBtn").addEventListener("touchstart",()=>{
+    if(canJump){
+      velocityY=0.3;
+      canJump=false;
+    }
+  });
 
-  stick.style.left=37+x+"px";
-  stick.style.top=37+y+"px";
-
-  moveForward=-y/65;
-  moveSide=x/65;
-});
-
-joystick.addEventListener("touchend",()=>{
-  stick.style.left="37px";
-  stick.style.top="37px";
-  moveForward=0;
-  moveSide=0;
-});
-
-// ================= JUMP =================
-document.getElementById("jumpBtn").addEventListener("touchstart",()=>{
-  if(canJump){
-    velocityY=0.3;
-    canJump=false;
-  }
-});
-
-// ================= CAMERA CONTROL =================
-let startX=0,startY=0;
-
-document.addEventListener("touchstart",e=>{
-  if(e.touches.length==1){
+  let startX=0,startY=0;
+  document.addEventListener("touchstart",e=>{
     startX=e.touches[0].clientX;
     startY=e.touches[0].clientY;
-  }
-});
+  });
 
-document.addEventListener("touchmove",e=>{
-  if(e.touches.length==1){
+  document.addEventListener("touchmove",e=>{
     let dx=e.touches[0].clientX-startX;
     let dy=e.touches[0].clientY-startY;
-
     yaw-=dx*0.005;
     pitch-=dy*0.005;
-
     pitch=Math.max(-1.2,Math.min(1.2,pitch));
-
     startX=e.touches[0].clientX;
     startY=e.touches[0].clientY;
-  }
-});
+  });
+}
 
 // ================= COLLISION =================
 function checkCollision(nx,nz){
   for(let b of buildings){
     if(Math.abs(nx-b.position.x)<3 &&
-       Math.abs(nz-b.position.z)<3 &&
-       player.position.y< b.position.y + 5){
-         return true;
+       Math.abs(nz-b.position.z)<3){
+      return true;
     }
   }
   return false;
@@ -198,7 +311,6 @@ function animate(){
 
   nx+=Math.sin(yaw)*moveForward*0.4;
   nz+=Math.cos(yaw)*moveForward*0.4;
-
   nx+=Math.cos(yaw)*moveSide*0.4;
   nz-=Math.sin(yaw)*moveSide*0.4;
 
@@ -209,36 +321,21 @@ function animate(){
 
   velocityY-=0.01;
   player.position.y+=velocityY;
-
   if(player.position.y<=0){
     player.position.y=0;
     velocityY=0;
     canJump=true;
   }
 
-  // CAMERA BEBAS
-  const distance=10;
+  const dist=10;
+  camera.position.x=player.position.x - Math.sin(yaw)*dist*Math.cos(pitch);
+  camera.position.z=player.position.z - Math.cos(yaw)*dist*Math.cos(pitch);
+  camera.position.y=player.position.y + 4 + Math.sin(pitch)*dist;
 
-  camera.position.x=player.position.x - Math.sin(yaw)*distance*Math.cos(pitch);
-  camera.position.z=player.position.z - Math.cos(yaw)*distance*Math.cos(pitch);
-  camera.position.y=player.position.y + 4 + Math.sin(pitch)*distance;
-
-  camera.lookAt(
-    player.position.x,
-    player.position.y+2,
-    player.position.z
-  );
+  camera.lookAt(player.position.x,player.position.y+2,player.position.z);
 
   renderer.render(scene,camera);
 }
-
-animate();
-
-window.addEventListener("resize",()=>{
-  camera.aspect=innerWidth/innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(innerWidth,innerHeight);
-});
 </script>
 </body>
 </html>
